# hyrise

./: ast.dot
scripts/: coverage.sh
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  benchmark_join_fixture.cpp  benchmark_join_fixture.hpp  table_generator.cpp  table_generator.hpp  tpch_benchmark.cpp
src/benchmark-libs/tpcc/: new_order.cpp
src/benchmark/operators/: join_benchmark.cpp  projection_benchmark.cpp
src/benchmark/tpcc/: delivery_benchmark.cpp
src/benchmarklib/tpcc/: new_order.cpp  order_status.cpp
src/benchmarklib/tpch/: tpch_table_generator.cpp
src/jit/: CMakeLists.txt  Embed.cmake  jit_playground.cpp
src/jit/jit/: blob_store.cpp  blob_store.hpp  jit.cpp  jit.hpp  jit_query_executor.cpp  jit_query_executor.hpp  pipeline.hpp
src/jit/jit/stages/: allow_inline_stage.cpp  allow_inline_stage.hpp  compile_stage.cpp  compile_stage.hpp  constant_substitute_stage.cpp  constant_substitute_stage.hpp  execute_stage.cpp  execute_stage.hpp  extract_stage.cpp  extract_stage.hpp  jit_stage.cpp  jit_stage.hpp  llvm_stage.hpp  manual_inline_stage.cpp  manual_inline_stage.hpp  opt_stage.cpp  opt_stage.hpp  rename_stage.cpp  rename_stage.hpp  replace_stage.cpp  replace_stage.hpp  stack_args_stage.cpp  stack_args_stage.hpp  stage.hpp  strip_debug_info_stage.cpp  strip_debug_info_stage.hpp
src/jit/query/: query.cpp  query.hpp
src/jit/query/operators/: aggregate.cpp  aggregate.hpp  get_table.cpp  get_table.hpp  get_table_mock.cpp  get_table_mock.hpp  operator.hpp  print.cpp  print.hpp  source.hpp  table_scan.cpp  table_scan.hpp
src/jit/util/: error_utils.hpp  file_utils.hpp  fn_utils.hpp  llvm_utils.hpp
src/lib/: CMakeLists.txt  type_cast.hpp
src/lib/logical_query_plan/: abstract_lqp_node.hpp  aggregate_node.cpp  create_view_node.cpp  create_view_node.hpp  delete_node.cpp  drop_view_node.cpp  drop_view_node.hpp  dummy_table_node.cpp  dummy_table_node.hpp  insert_node.cpp  insert_node.hpp  join_node.hpp  limit_node.cpp  limit_node.hpp  logical_plan_root_node.hpp  lqp_translator.cpp  mock_node.hpp  predicate_node.hpp  projection_node.cpp  projection_node.hpp  show_columns_node.hpp  show_tables_node.cpp  show_tables_node.hpp  sort_node.hpp  stored_table_node.hpp  (+6 more)
src/test/: CMakeLists.txt  base_test.cpp  base_test.hpp  testing_assert.cpp  testing_assert.hpp
tpch_tables/: customer_head.tbl  lineitem_head.tbl  orders_head.tbl  part_head.tbl  partsupp_head.tbl  supplier_head.tbl
(+113 files in other folders)
